@@ -36,7 +36,12 @@ class tx_templavoila_datastructure_dbbase extends tx_templavoila_datastructure {
 	 * @param integer $uid
 	 */
 	public function __construct($uid) {
-		$this->row = t3lib_beFunc::getRecordWSOL('tx_templavoila_datastructure', $uid);
+			// getting the DS for the DB and make sure the workspace-overlay is performed (done internally)
+		if (TYPO3_MODE == 'FE') {
+			$this->row = $GLOBALS['TSFE']->sys_page->checkRecord('tx_templavoila_datastructure', $uid);
+		} else {
+			$this->row = t3lib_beFunc::getRecordWSOL('tx_templavoila_datastructure', $uid);
+		}
 
 		$this->setLabel($this->row['title']);
 		$this->setScope($this->row['scope']);
@@ -58,6 +63,15 @@ class tx_templavoila_datastructure_dbbase extends tx_templavoila_datastructure {
 	 */
 	public function getKey() {
 		return $this->row['uid'];
+	}
+
+	/**
+	 * Provides the datastructure configuration as XML
+	 *
+	 * @return string
+	 */
+	public function getDataprotXML() {
+		return $this->row['dataprot'];
 	}
 
 	/**
