@@ -3,7 +3,7 @@
 if (!defined ('TYPO3_MODE'))  die ('Access denied.');
 
 // unserializing the configuration so we can use it here:
-$_EXTCONF = unserialize($_EXTCONF);
+$_EXTCONF = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['templavoila']);
 
 if (TYPO3_MODE=='BE') {
 
@@ -42,12 +42,11 @@ if (TYPO3_MODE=='BE') {
 		t3lib_extMgm::extPath($_EXTKEY).'class.tx_templavoila_extdeveval.php',
 		'TemplaVoila L10N Mode Conversion Tool'
 	);
-
-		// Static DS
-	if ($_EXTCONF['staticDS.']['enable']) {
-		include_once(t3lib_extMgm::extPath('templavoila') . 'classes/class.tx_staticdstools.php');
-		tx_staticDStools::readStaticDsFilesIntoArray($_EXTCONF);
-	}
+}
+	// Static DS
+if ($_EXTCONF['staticDS.']['enable']) {
+	include_once(t3lib_extMgm::extPath('templavoila') . 'classes/class.tx_staticdstools.php');
+	tx_staticDStools::readStaticDsFilesIntoArray($_EXTCONF);
 }
 
 	// Adding tables:
